Fixup GC option