@@ -14,6 +14,7 @@ export MAX_HEAP_SIZE
 java \
   -Xmx$MAX_HEAP_SIZE \
   -Xloggc:./log/gc.log -XX:+PrintGCDetails \
+  -XX:+PrintGCDateStamps \
   -Dakka.cluster.seed-nodes.0=$SEED_ADDR \
   -Dconfig.resource=$CONFIG \
   -Dcom.sun.management.jmxremote \
